--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>
         Ha bármilyen kérdése van, vagy szeretne többet megtudni kínálatunkról, kérjük, látogasson el hozzánk vagy lépjen kapcsolatba velünk:<br>
         <strong>Cím:</strong> 5678 Állatkerti út, Város, Ország, 12345<br>
-        <strong>Telefon:</strong> +12 345 6789<br>
+        <strong>Telefon:</strong> +36 20 69 911 420<br>
         <strong>Email:</strong> info@allatvilagkereskedes.hu
     </p>
     
