--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="icon" href="gibikon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="gibikion.ico" type="image/x-icon">
     <title>Állatvilág Állatkereskedés</title>
 </head>
 
