--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="icon" href="gibikon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="gibikion.ico" type="image/x-icon">
     <title>Állatvilág Állatkereskedés</title>
 </head>
 
 <body>
     <nav class="main-menu">
         <ul>
-            <li><a href="#">Kezdőlap</a></li>
-            <li><a href="#">Állatok</a></li>
+            <li><a href="index.html">Kezdőlap</a></li>
+            <li><a href="allatok.html">Állatok</a></li>
             <li><a href="#">Termékek</a></li>
             <li><a href="#">Kapcsolat</a></li>
             <li><a href="#">Nyereményjáték</a></li>
