--- a/kinalat.html
+++ b/kinalat.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+        <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+        <script>
+            var cursor = new MouseFollower();
+        </script>
     <nav class="main-menu">
         <ul>
             <li><a href="bolt.html">Kezdőlap</a></li>
