--- a/kinalat.html
+++ b/kinalat.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="icon" href="gibikon.ico" type="image/x-icon">
+     <link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css">
+  <link rel="shortcut icon" href="gibikion.ico" type="image/x-icon">
+  
     <title>Állatvilág Állatkereskedés</title>
 </head>
 
 <body>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-        <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
-        <script>
-            var cursor = new MouseFollower();
-        </script>
+    <body>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+<script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+<script>
+    var cursor = new MouseFollower();
+</script>
+        
     <nav class="main-menu">
         <ul>
             <li><a href="bolt.html">Kezdőlap</a></li>
